View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026723 | Open CASCADE | OCCT:Samples | public | 2015-09-25 16:28 | 2017-01-13 19:39 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026723: Qt IE sample can not import STEP and IGES files with names containing not ascii symbols | ||||
Description | Qt IE sample can not import STEP and IGES files with names containing not ascii symbols | ||||
Steps To Reproduce | Run IE sample. Create new documents and use menu item "Import" to load STEP or IGES file containing not ascii symbols (cyrillic for example)in the name. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26723 has been created by gka. SHA-1: 76764ec72af7b7f52f56d09b5644eaa7e6e7ee7a Detailed log of new commits: Author: gka Date: Fri Sep 25 16:30:29 2015 +0300 0026723: Qt IE sample can not import STEP and IGES files with names containing not ascii symbols Added conversion of the names of the imported files in the Utf8 coding |
|
Branch CR26723 is ready to be reviewed |
|
No remarks, please integrate |
|
Branch CR26723 has been deleted by kgv. SHA-1: 76764ec72af7b7f52f56d09b5644eaa7e6e7ee7a |
occt: master 90c8c7f3 2015-09-25 13:30:29
Committer: bugmaster Details Diff |
0026723: Qt IE sample can not import STEP and IGES files with names containing not ascii symbols Added conversion of the names of the imported files in the Utf8 coding |
Affected Issues 0026723 |
|
mod - samples/qt/Interface/src/Translate.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-09-25 16:28 |
|
New Issue | |
2015-09-25 16:28 |
|
Assigned To | => bugmaster |
2015-09-25 16:30 | git | Note Added: 0046145 | |
2015-09-25 16:31 |
|
Note Added: 0046146 | |
2015-09-25 16:31 |
|
Assigned To | bugmaster => abv |
2015-09-25 16:31 |
|
Status | new => resolved |
2015-09-25 16:32 |
|
Steps to Reproduce Updated | |
2015-09-25 17:08 |
|
Note Added: 0046150 | |
2015-09-25 17:08 |
|
Assigned To | abv => bugmaster |
2015-09-25 17:08 |
|
Status | resolved => reviewed |
2015-10-02 14:56 | bugmaster | Changeset attached | => occt master 90c8c7f3 |
2015-10-02 14:56 | bugmaster | Status | reviewed => verified |
2015-10-02 14:56 | bugmaster | Resolution | open => fixed |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:38 | git | Note Added: 0047025 | |
2015-10-23 20:49 |
|
Fixed in Version | => 6.9.1 |
2017-01-13 19:39 | kgv | Relationship added | related to 0028353 |