0026723: Qt IE sample can not import STEP and IGES files with names containing not ascii symbols

Added conversion of the names of the imported files in the  Utf8 coding